[metadata]
name = beakertron
url = https://gitlab.com/Boolean263/BeakerTron
author = David Perry
author_email = boolean263@protonmail.com
description = Comedy Q&A website software
long_description = file: README.md
long_description_content_type = text/x-markdown
license = GPLv3+
license_files =
    LICENSE.md
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    beakertron

[flake8]
max-line-length = 88

[pycodestyle]
max-line-length = 88
